// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectableListItem is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiSelectableListItem testClass1 testClass2"
  data-test-subj="test subject string"
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiSelectableListItem__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</button>
`;

exports[`EuiSelectableListItem props append 1`] = `
<button
  class="euiSelectableListItem"
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiSelectableListItem__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiSelectableListItem__text"
    />
    <span
      class="euiSelectableListItem__append"
    >
      <span />
    </span>
  </span>
</button>
`;

exports[`EuiSelectableListItem props checked is off 1`] = `
<button
  class="euiSelectableListItem"
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiIcon--text euiSelectableListItem__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
      />
    </svg>
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</button>
`;

exports[`EuiSelectableListItem props checked is on 1`] = `
<button
  class="euiSelectableListItem"
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiIcon--text euiSelectableListItem__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</button>
`;

exports[`EuiSelectableListItem props disabled 1`] = `
<button
  aria-disabled="true"
  class="euiSelectableListItem"
  disabled=""
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiSelectableListItem__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</button>
`;

exports[`EuiSelectableListItem props isFocused 1`] = `
<button
  aria-selected="true"
  class="euiSelectableListItem euiSelectableListItem-isFocused"
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiSelectableListItem__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</button>
`;

exports[`EuiSelectableListItem props prepend 1`] = `
<button
  class="euiSelectableListItem"
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiSelectableListItem__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiSelectableListItem__prepend"
    >
      <span />
    </span>
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</button>
`;

exports[`EuiSelectableListItem props showIcons can be turned off 1`] = `
<button
  class="euiSelectableListItem"
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</button>
`;
